# oracle-compute

./: .gitignore  Cargo.toml  Doxyfile  README.md
.github/workflows/: ci.yml
bindings/python/: setup.py
bindings/python/docs/: conf.py
examples/basic/: hello_oracle.c  simple_prediction.py
scripts/test/: run_tests.sh
src/c/: Makefile  oracle_core.c  oracle_core.h
src/rust/: lib.rs
